--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,7 @@ body {
 }
 
 img {
-	position: relative;
-	transform: translate(-50%, -50%);
-	left: 50%;
-	bottom: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
