--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,4 @@
 body {
-	margin: 0;
+	margin: 0, auto;
 	padding: 0;
-}
-
-img {
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
